--- a/src/Makefile
+++ b/src/Makefile
@@ -10,13 +10,13 @@ LIBS=-lsfml-graphics -lsfml-window -lsfml-system -lsfml-network -lsfml-audio
 
 all: main
 
-main: main.o renderer.o entite.o unite.o guerrier.o robot.o attackCommande.o loadTexture.o jeu.o
-	$(LD) $(LDFLAGS)  main.o renderer.o entite.o unite.o guerrier.o attackCommande.o robot.o loadTexture.o jeu.o -o main $(LIBS)
+main: main.o renderer.o entite.o unite.o guerrier.o robot.o attackCommande.o loadTexture.o moveCommande.o jeu.o 
+	$(LD) $(LDFLAGS)  main.o renderer.o entite.o unite.o guerrier.o attackCommande.o robot.o loadTexture.o moveCommande.o jeu.o -o main $(LIBS)
 
-main.o: main.cpp jeu.hpp renderer.hpp unite.hpp robot.hpp guerrier.hpp attackCommande.hpp settings.hpp loadTexture.hpp
+main.o: main.cpp jeu.hpp renderer.hpp unite.hpp robot.hpp guerrier.hpp attackCommande.hpp settings.hpp loadTexture.hpp moveCommande.hpp
 	$(CPP) $(CPPFLAGS) -c main.cpp
 
-jeu.o : jeu.cpp jeu.hpp renderer.hpp unite.hpp robot.hpp guerrier.hpp attackCommande.hpp settings.hpp loadTexture.hpp
+jeu.o : jeu.cpp jeu.hpp renderer.hpp unite.hpp robot.hpp guerrier.hpp attackCommande.hpp settings.hpp loadTexture.hpp moveCommande.hpp
 	$(CPP) $(CPPFLAGS) -c jeu.cpp
 	
 entite.o : entite.cpp entite.hpp
@@ -33,6 +33,9 @@ robot.o : robot.cpp robot.hpp unite.hpp
 
 attackCommande.o : attackCommande.cpp attackCommande.hpp unite.hpp commande.hpp
 	$(CPP) $(CPPFLAGS) -c attackCommande.cpp 
+
+moveCommande.o : moveCommande.cpp moveCommande.hpp unite.hpp commande.hpp
+	$(CPP) $(CPPFLAGS) -c moveCommande.cpp 
 
 renderer.o : renderer.cpp renderer.hpp settings.hpp
 	$(CPP) $(CPPFLAGS) -c renderer.cpp 
